[gd_scene load_steps=5 format=3 uid="uid://da3gwwenk0v72"]

[ext_resource type="Texture2D" uid="uid://rer87qkuee7s" path="res://icon.svg" id="1_5tj5t"]
[ext_resource type="Script" path="res://scripts/task.gd" id="1_88n6n"]
[ext_resource type="FontFile" uid="uid://dgr7ev4mi17td" path="res://fonts/WendyOne-Regular.ttf" id="2_noevd"]

[sub_resource type="Theme" id="Theme_s62e6"]
default_font = ExtResource("2_noevd")
default_font_size = 24

[node name="Task" type="HBoxContainer"]
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("1_88n6n")

[node name="MovelImage" type="TextureRect" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
texture = ExtResource("1_5tj5t")
expand_mode = 1
stretch_mode = 5

[node name="ColumnLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_s62e6")
theme_override_font_sizes/font_size = 32
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_s62e6")
theme_override_font_sizes/font_size = 32
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RowLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_s62e6")
theme_override_font_sizes/font_size = 32
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DirectionImage" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
clip_contents = true
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
texture = ExtResource("1_5tj5t")
expand_mode = 1
stretch_mode = 5

[node name="Double" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_s62e6")
theme_override_font_sizes/font_size = 32
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="2D" type="Label" parent="VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_s62e6")
theme_override_font_sizes/font_size = 16
text = "2D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="2DCheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
disabled = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="3D" type="Label" parent="VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_s62e6")
theme_override_font_sizes/font_size = 16
text = "3D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3DCheckBox" type="CheckBox" parent="VBoxContainer2"]
layout_mode = 2
disabled = true
